--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,11 @@
 services:
+  mailhog:
+    image: mailhog/mailhog
+    logging:
+      driver: "none"
+    ports:
+      - 1025:1025
+      - 8025:8025
   webapp:
     image: andrewc2020/signup
     ports:
